# med-safety-gym-v2

./: .dockerignore  .env.example  .gitignore  BENCHMARK_README.md  CLOUD_RUN_DEPLOYMENT.md  DATA_AGENT_PLAN.md  DATA_GENERATION_REPORT.md  DATA_SCHEMA.md  DATA_STRATEGY.md  DEPLOYMENT_INFO.md  DEPLOYMENT_INFO.md.template  Dockerfile  Dockerfile.a2a  Dockerfile.green  Dockerfile.hub  Dockerfile.mcp  Dockerfile.purple  GITHUB_MODELS_GUIDE.md  MCP_GUIDE.md  README.md  README_SAFECLAW.md  SAFECLAW_COMPARISON.md  SAFECLAW_QUICKSTART.md  SIMPLE_EVAL_API.md  STARTUP_GUIDE.md  Skill.md  TELEGRAM_SETUP.md  TESTING_GUIDE.md  VERIFICATION_PROMPTS.md  a2a-scenario.toml  block_one_penalties.md  block_two_penalties.md  check_enums.py  check_rotation.py  claw_manifest.json  client.py  cloudbuild.yaml  debug_eval.txt  demo_safeclaw.py  demo_session_memory.py  (+41 more)
.android-keys/: dipgsafety-release.keystore  keystore_base64.txt
.safeclaw_keys/: hub_ed25519.priv  hub_ed25519.pub
benchmark_results/: BASE_MODEL_ANALYSIS.md  INITIAL_SFT_RESULTS.md  JSON_SFT_DATASET.md  analysis_ollama_gpt_oss_120b.md  gemini-2.0-flash-exp_results.json  ollama_deepseek-v3.1:671b-cloud_results.json  ollama_gpt-oss:120b-cloud_results.json  ollama_gpt-oss:20b-cloud_results.json  ollama_qwen3-coder:480b-cloud_results.json
bring-any-eval-to-life/: .gitignore  App.tsx  README.md  capacitor.config.ts  components.json  documentation.md  index.css  index.html  index.tsx  package-lock.json  package.json  vite.config.ts
datasets/: test_gen_enhanced.jsonl
docs/: ARCHITECTURE.md  DOCKER_DEPLOYMENT.md  MCP_GUIDE.md  NOTEBOOK_GUIDE.md  TUTORIALS_INDEX.md  agent_workflow.md  agent_workflow.mmd  evaluation_use_cases.md
examples/: README.md  batch_evaluation.py  colab_cloudrun_eval.py  custom_judge_integration.py  dipg-rl-with-benchmarks-01.ipynb  dipg-rl-with-benchmarks.ipynb  dipg-rl.ipynb  dipg-safety-gym.ipynb  eval_simple.py  eval_with_litellm.py  eval_with_unsloth.py  generate_test_dataset.py  hyperparameter_finetuning.ipynb  prepare_grpo_dataset_json.py  run_eval_colab.py  run_mcp_eval.py  sharegpt_data_generator.py
litellm-mcp-server/: README.md  openai_server.py  requirements.txt  test_client.py
med_safety_eval/: __init__.py  data_agent.py  export_results.py  format_parser.py  github_client.py  logic.py  manager.py  models.py  observability_hub.py  observer.py  profiles.json  rubric.py  schemas.py  verify_data_agent.py
med_safety_gym/: app.py  auth_guard.py  benchmark_agent.py  benchmark_server.py  claw_agent.py  claw_server.py  client.py  crypto.py  database.py  dipg_agent.py  dipg_environment.py  eval_core.py  evaluation_service.py  evaluation_service_v2.py  executor.py  experience_refiner.py  experience_server.py  export_gauntlet.py  fastmcp_server.py  format_parser.py  github_tools.py  green_agent.py  green_server.py  intent_classifier.py  intent_server.py  manifest_interceptor.py  mcp_client_adapter.py  mcp_server.py  models.py  policy.py  prompt_boundary.py  purple_agent.py  purple_executor.py  purple_server.py  session_memory.py  sinks.py  skill_manifest.py  telegram_bridge.py  test_a2a_client.py  test_fastmcp.py  (+5 more)
results/: e.json  eval_new.json  eval_new_2.json  eval_new_4.json  eval_other.json  eval_results.json  eval_results_120b.json  eval_results_ollama_gemini-3-flash-preview_cloud_strong.json  eval_results_ollama_gpt-oss_120b-cloud_strong.json  eval_results_ollama_gpt-oss_20b-cloud_default.json  eval_results_ollama_gpt-oss_20b-cloud_strong.json  eval_results_ollama_hf.co_unsloth_medgemma-4b-it-GGUF_strong.json  eval_results_ollama_ministral-3_3b-cloud_strong.json  eval_results_ollama_ministral-3_8b-cloud_strong.json  eval_results_ollama_nemotron-3-nano_30b-cloud_strong.json  model_card.md  submission_baseline.json  surfiniaburger-20260115-225156.json  surfiniaburger-20260116-003857.json  surfiniaburger-20260116-131423.json  surfiniaburger-20260117-175010.json  surfiniaburger-20260117-213640.json  surfiniaburger-20260119-180854.json  surfiniaburger-20260120-134800.json  surfiniaburger-20260123-002211.json  surfiniaburger-20260123-012038.json  surfiniaburger-20260123-024837.json  surfiniaburger-20260123-025520.json  surfiniaburger-20260128-192154.json  surfiniaburger-20260129-181912.json  (+32 more)
(+378 files in other folders)
