[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-dipg-safety"
version = "0.1.15"
description = "DIPG Safety Environment for OpenEnv"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openenv-core>=0.1.0",
    "fastapi>=0.109.1",
    "uvicorn[standard]>=0.24.0",
    "requests>=2.31.0",
    "wsproto==1.0.0",
    "gunicorn==22.0.0",
    "datasets",
    "starlette>=0.36.3",
    "idna>=3.7",
]

[project.optional-dependencies]
agent = [
    "google-adk>=1.0.0",
    "a2a-sdk>=0.1.0",
    "litellm>=1.0.0",
]
mcp = [
    "mcp>=1.0.0",
    "fastmcp>=0.5.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ipykernel>=6.29.5",
]
visualization = [
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "scipy>=1.11.0",
    "pandas>=2.1.0",
    "reportlab>=4.0.0",
]

# This creates a command 'dipg-server' you can run from the terminal
[project.scripts]
dipg-server = "med_safety_gym.app:main"

[tool.setuptools]
packages = ["med_safety_gym", "tests"]  # Includes your gym and test modules
