[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-dipg-safety"
version = "0.1.21"
description = "DIPG Safety Environment for OpenEnv"
authors = [
    { name = "surfiniaburger" },
]
license = { text = "BSD-3-Clause" }
readme = "README.md"
requires-python = ">=3.11"
keywords = ["openenv", "safety", "dipg", "ai-safety", "environment"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openenv-core>=0.2.0",
    "pydantic>=2.0.0",
    "fastapi>=0.109.1",
    "uvicorn[standard]>=0.24.0",
    "requests>=2.31.0",
    "wsproto==1.0.0",
    "gunicorn==22.0.0",
    "datasets",
    "starlette>=0.36.3",
    "idna>=3.7",
]

[project.urls]
"Homepage" = "https://github.com/surfiniaburger/med-safety-gym"
"Bug Tracker" = "https://github.com/surfiniaburger/med-safety-gym/issues"
"Repository" = "https://github.com/surfiniaburger/med-safety-gym"

[project.optional-dependencies]
agent = [
    "google-adk>=1.0.0",
    "a2a-sdk>=0.1.0",
    "litellm>=1.0.0",
]
mcp = [
    "mcp>=1.0.0",
    "fastmcp>=0.5.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ipykernel>=6.29.5",
]
visualization = [
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "scipy>=1.11.0",
    "pandas>=2.1.0",
    "reportlab>=4.0.0",
]

# This creates a command 'dipg-server' you can run from the terminal
[project.scripts]
dipg-server = "med_safety_gym.app:main"

[tool.setuptools]
packages = ["med_safety_gym", "tests"]  # Includes your gym and test modules
